--- a/Style.css
+++ b/Style.css
@@ -5,6 +5,10 @@
 body{
     margin: 0;
     padding: 0;
+    line-height: 1.5;
+    font-size: 14px;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 #container{
     width: 100%;
@@ -19,8 +23,92 @@ body{
     width: 60%;
     height: 537px;
     border: 1px solid transparent;
-    border-radius: 2%;
+    border-radius: 10px;
     background-color: rgba(114, 148, 212, 0.7);
    
     margin: 20px auto;
 }
+
+#content h2{
+    height: 50px;
+    text-align: center;
+    background-color: rgb(75, 60, 216);
+    margin-top: 0;
+    padding-top: 12px;
+    margin-bottom: 0px;
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+}
+
+/* Start Form */
+.form-items{
+    width: 100%;
+    height: 70px;           
+    /* background-color: brown; */
+}
+
+.label-section{
+    width: 30%;
+    height: inherit;
+    /* background-color: beige; */
+    float: left;
+
+}
+
+.main-labels{
+display: inline-block;
+padding: 22px;
+}
+
+.input-section{
+    float: right;
+    width: 70%;
+    /* background-color: rgb(96, 231, 168); */
+    height: inherit;
+    padding: 22px;
+}
+input , #options{
+    border: none;
+    border-radius: 4px;
+    height: 30px;
+    
+}
+.single-input{
+    width: 440px;
+}
+.double-input{
+    width: 220px;
+}
+#area-code{
+    width: 110px;
+    margin-right: 105px;
+}
+.double-label{
+    margin-right: 160px;
+}
+input:focus{
+    outline: none;
+}
+.beginner input , label{
+    height: auto;
+}
+
+#button-section{
+    text-align: center;
+    padding: 10px;
+}
+#button-section button{
+    border-radius: 6px;
+    border: none;
+    background: cyan;
+    width: 200px;
+    height: 35px;
+    margin-right: 112px;
+    transition: 0.6s;
+}
+#button-section button:hover{
+    background-color: aquamarine;
+}
+/* End Form */
